--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,8 @@ ul {
 .wrapper {
   position: relative;
   background-image: url("img/default-bg.png");
+  width: 1280px;
+  min-height: 720px;
 }
 
 /* наложение opacity если
@@ -42,6 +44,7 @@ ul {
   padding-top: 20px;
   padding-bottom: 40px;
   padding-left: 40%;
+  transition: 0.5s;
 }
 
 .additional-menu__item {
@@ -95,6 +98,7 @@ ul {
 }
 
 .nav {
+  transition: 0.5s;
   position: absolute;
   top: 0;
   left: 40px;
@@ -138,6 +142,7 @@ ul {
 }
 
 .slider__item--current {
+  transition: 0.5s;
   display: block;
 }
 
@@ -148,6 +153,7 @@ ul {
 }
 
 .preview__list {
+  transition: 0.5s;
   position: absolute;
   width: 100%;
   top: 0;
