--- a/css/styles.css
+++ b/css/styles.css
@@ -29,7 +29,7 @@ ul {
 
 .wrapper {
   position: relative;
-  background-image: url("img/default-bg.png");
+  background-image: url("../img/default-bg.png");
   width: 1280px;
   min-height: 720px;
 }
@@ -243,7 +243,7 @@ ul {
   right: -30px;
   width: 22px;
   height: 22px;
-  background-image: url("img/rating-star-icon.png");
+  background-image: url("../img/rating-star-icon.png");
   background-repeat: no-repeat;
 }
 
